fix: Update to be more explicit of a gap of 0 if rows or columns are added to this forked block
Per Nick discussion: only a concern if someone styles it with { columns: 2; } or something, but it could be an interesting "bug" if columns are used

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -152,7 +152,7 @@
 				),
 				right-rail-rail-container: (
 					grid-template-columns: 2fr 1fr,
-					gap: normal,
+					gap: 0,
 					grid-template-rows: initial,
 				),
 				right-rail-main-side-rail: (
@@ -167,7 +167,7 @@
 				),
 				right-rail-advanced-rail-container: (
 					grid-template-columns: 2fr 1fr,
-					gap: normal,
+					gap: 0,
 					grid-template-rows: initial,
 				),
 				right-rail-advanced-main-side-rail: (
